maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:17: error: 'while' expected but '}' found.
  }while (isOverBaggle() == false)
  ^RandomMouseMaze:17: error: ';' expected but 'while' found.
  }while (isOverBaggle() == false)
   ^RandomMouseMaze:22: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:29: error: Unmatched closing brace '}' ignored here
}
^